# Irodori-TTS

./: eval_cer.py  infer.py  pyproject.toml  requirements.txt
irodori_tts/: inference_runtime.py  phoneme_length.py  rf.py  waveex.py
