[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "irodori-tts"
version = "0.1.0"
description = "Irodori-TTS inference codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "dacvae @ git+https://github.com/facebookresearch/dacvae",
    "huggingface-hub>=0.34.0,<1.0",
    "pyyaml>=6.0",
    "safetensors>=0.7.0",
    "soundfile>=0.12.0",
    "sentencepiece>=0.1.99,<0.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers<5",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[tool.setuptools]
py-modules = ["infer"]

[tool.setuptools.packages.find]
include = ["irodori_tts*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["irodori_tts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
